--- a/index.html
+++ b/index.html
@@ -31,6 +31,24 @@
 </head>
 
 <body>
+    <!-- 모달창 -->
+    <div class="modal">
+        <div class="modal-wrap">
+            <span class="modal-txt">
+                본 사이트는 스터디용으로 제작되었으며<br>
+                모든 리소스는 원저작자에게 있습니다
+                <em>
+                    <b>< REVIEW ></b>
+                    까다로운 매인 메뉴 작업이 있어 조금은 힘들었지만<br>
+                    어려웠던 만큼 많은 얻는 것도 많았습니다.
+                </em>
+            </span>
+            <button class="modal-close">
+                close
+            </button>
+        </div>
+    </div>
+    <!--// 모달창 -->
 
     <!-- 패밀리사이트 -->
     <div class="family-wrap">
