meta 태그 업데이트

--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
         content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <title>산청군청</title>
     <!--[if lt IE 9]>
-  <script src="js/html5shiv.js"></script>
-  <![endif]-->
+    <script src="js/html5shiv.js"></script>
+    <![endif]-->
+
+    <meta name="description" content="산청군청 클론코딩 사이트"/>
+    <meta name="keywords" content="HTML, CSS, JavaScript, J-query, 산청군청, 클론코딩"/>
+    <meta name="author" content="HUI-JUN LEE" />
+    <meta name="og:site_name" content="산청군청 사이트" />
+    <meta name="og:title" content="메타 태그를 통한 검색엔진 최적화" />
+    <meta name="og:description" content="까다로운 메인메뉴 작업을 통해 다양한 스킬들을 배울 수 있었다."/>
+    <meta name="og:type" content="website" />
+    <meta name="og:url" content="https://secret1601.github.io/sancheong/" />
+    <meta name="og:image" content="http://images/mobile_web_icon.png"/>
+    
+
     <script src="js/prefixfree.min.js"></script>
     <script src="js/respond.min.js"></script>
     <link rel="stylesheet" href="css/reset.css">
